# pdf-element-extractor

./: .gitignore  DEBUG_IMPROVEMENTS.md  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  README.md  USAGE_GUIDE.md  install.sh  pyproject.toml  requirements.txt  setup.py  test_installation.py
pdf_element_extractor/: __init__.py
pdf_element_extractor/core/: analyzer.py  main.py  models.py
pdf_element_extractor/filters/: filters.py
pdf_element_extractor/processors/: processors.py
pdf_element_extractor/utils/: caption_pattern_estimator.py
pdf_element_extractor/visualization/: visualizer.py
